system/argocd/argocd/templates/node-port-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-nodeport
spec:
  ports:
  - name: port-1
    nodePort: 30753
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: port-2
    nodePort: 32662
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
  type: NodePort
